# git-gamify

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  pytest.ini
src/gg_cli/: __init__.py  achievements.py  core.py  definitions_loader.py  gamify.py  git_service.py  main.py  translator.py  utils.py
src/gg_cli/definitions/: achievements.json  rewards.json  rules.json
src/gg_cli/locales/: en.json  zh.json
tests/: conftest.py  test_achievement_system.py  test_cli_commands.py  test_core_repository.py  test_definitions_validation.py  test_gamify_event_processing.py  test_gamify_logic.py  test_git_wrapper.py
