[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-gamify"
version = "1.0.1"
authors = [
    { name = "DeerYang", email = "yhddeer@gamail.com" },
]
description = "A CLI tool that adds a fun gamification layer to your daily Git usage."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
gg = "gg_cli.main:cli_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["**/*.json"]